--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
 
     <meta charset="UTF-8">
-    <meta name="description" content="Projeto Equipe 0 Gama Niws Net: compartilhando notícias positivas sobre a Covid-19 que você talvez ainda não tenha visto por aí.">
+    <meta name="description" content="Projeto Equipe 0 Gama News Net: compartilhando notícias positivas sobre a Covid-19 que você talvez ainda não tenha visto por aí.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Niws Net – Notícias</title>
@@ -64,7 +64,7 @@
             </div>
 
             <div class="image">
-                <img alt="Foto de um médico negro sorrindo de frente usando um jaleco branco e com um estetoscópio no pescoço." src="assets/images/doctor.svg">
+                <img alt="Foto de um médico sorrindo de frente usando um jaleco branco e com um estetoscópio no pescoço." src="assets/images/doctor.svg">
             </div>
         </section>
 
@@ -279,7 +279,7 @@
         <div class="container">
             <p>O objetivo deste projeto é compartilhar notícias positivas sobre a Covid-19 que viraram destaque na mídia.</p>
             <img alt="Logotipo de Niws Net" src="assets/images/logotype.svg">
-            <p>© 2021 Equipe 8 Gama Niws Net - Todos os direitos reservados.</p>
+            <p>© 2021 Equipe 8 Gama News Net - Todos os direitos reservados.</p>
             <p>Programa de Formação Tech Itaú PCD em parceria com a Gama Academy.</p>
         </div>
     </footer>
