atualização no index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
 
     <meta charset="UTF-8">
-    <meta name="description" content="Projeto Equipe 0 Gama News Net: compartilhando notícias positivas sobre a Covid-19 que você talvez ainda não tenha visto por aí.">
+    <meta name="description" content="Projeto Equipe 0 News Net: compartilhando notícias positivas sobre a Covid-19 que você talvez ainda não tenha visto por aí.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Niws Net – Notícias</title>
@@ -25,7 +25,7 @@
 
     <header class="navbar">
         <div class="container">
-            <a href="/index.html"><span class="sr-only">Início</span><div class="logotype" title="Logotipo com o nome do jornal chamado Gama Niws Net e um ícone do mapa do Brasil, que representa o site do jornal."></div></a>
+            <a href="/index.html"><span class="sr-only">Início</span><div class="logotype" title="Logotipo com o nome do jornal chamado Niws Net e um ícone  que representa o site do jornal."></div></a>
 
             <ul class="list">
                 <li><a href="/index.html">Home</a></li>
