--- a/find-out-more.html
+++ b/find-out-more.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
 
     <meta charset="UTF-8">
-    <meta name="description" content="Aqui você tem acesso aos links de referência para as notícias que compartilhamos no projeto Equipe 8 Gama Pūrongo Aoteraoa. Acesse e confira!">
+    <meta name="description" content="Aqui você tem acesso aos links de referência para as notícias compartilhadas no projeto Equipe 0 News Net. Acesse e confira!">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gama Pūrongo Aoteraoa – Saiba mais</title>
@@ -25,7 +25,7 @@
 
     <header class="navbar">
         <div class="container">
-            <a href="/index.html"><span class="sr-only">Início</span> <div class="logotype" title="Logotipo com o nome do jornal chamado Gama Pūrongo e um ícone do mapa da Nova Zelândia, que representa o site do jornal."></div></a>
+            <a href="/index.html"><span class="sr-only">Início</span> <div class="logotype" title="Logotipo com o nome do jornal chamado News Net  e um ícone  que representa o site do jornal."></div></a>
 
             <ul class="list">
                 <li><a href="/index.html">Home</a></li>
@@ -87,8 +87,8 @@
     <footer class="footer">
         <div class="container">
             <p>O objetivo deste projeto é compartilhar notícias positivas sobre a Covid-19 que viraram destaque na mídia.</p>
-            <img alt="Logotipo de Gama Pūrongo Aoteraoa" src="assets/images/logotype.svg">
-            <p>© 2021 Equipe 8 Gama Pūrongo Aoteraoa - Todos os direitos reservados.</p>
+            <img alt="Logotipo de News Net" src="assets/images/logotype.svg">
+            <p>© 2021 Equipe 0 News Net  - Todos os direitos reservados.</p>
             <p>Programa de Formação Tech Itaú PCD em parceria com a Gama Academy.</p>
         </div>
     </footer>
