mais uma atualizaçãono HTML

--- a/find-out-more.html
+++ b/find-out-more.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Aqui você tem acesso aos links de referência para as notícias compartilhadas no projeto Equipe 0 News Net. Acesse e confira!">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gama Pūrongo Aoteraoa – Saiba mais</title>
+    <title>News Net - clique aqui para saber mais</title>
 </head>
 
 <body>
