atualização em arquivos

--- a/contact.html
+++ b/contact.html
@@ -15,17 +15,17 @@
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
 
     <meta charset="UTF-8">
-    <meta name="description" content="Gostaria de contribuir com o projeto da Equipe 8 Gama Pūrongo Aoteraoa!? Então, entre em contato!">
+    <meta name="description" content="Gostaria de contribuir com o projeto da Equipe News Net? entre em contato com nosco!">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gama Pūrongo Aoteraoa – Contato</title>
+    <title>News Net – Contato</title>
 </head>
 
 <body>
     
     <header class="navbar">
         <div class="container">
-            <a href="/index.html"><span class="sr-only">Início</span> <div class="logotype" title="Logotipo com o nome do jornal chamado Gama Pūrongo e um ícone do mapa da Nova Zelândia, que representa o site do jornal."></div></a>
+            <a href="/index.html"><span class="sr-only">Início</span> <div class="logotype" title="Logotipo com o nome do jornal chamado News Net e um ícone que representa o site do jornal."></div></a>
 
             <ul class="list">
                 <li><a href="/index.html">Home</a></li>
@@ -52,7 +52,7 @@
             <a href="/index.html">Home</a>
             <a href="/about.html">Sobre</a>
             <a href="/contact.html">Contato</a>
-            <a href="/find-out-more.html">Saiba mais</a>
+            <a href="/find-out-more.html">Saiba mais aqui</a>
         </div>
     </header>
 
@@ -73,7 +73,7 @@
         <div class="container">
             <p>O objetivo deste projeto é compartilhar notícias positivas sobre a Covid-19 que viraram destaque na mídia.</p>
             <img alt="Logotipo de Gama Pūrongo Aoteraoa" src="assets/images/logotype.svg">
-            <p>© 2021 Equipe 8 Gama Pūrongo Aoteraoa - Todos os direitos reservados.</p>
+            <p>© 2021 Equipe 0 News Net - Todos os direitos reservados.</p>
             <p>Programa de Formação Tech Itaú PCD em parceria com a Gama Academy.</p>
         </div>
     </footer>
